--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configure the View Resolver
-spring.view.prefix=/WEB-INF/vefvidmot/
+spring.view.prefix=/WEB-INF/view/
 spring.view.suffix=.jsp
 
 
