--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Configure the View Resolver
-spring.view.prefix=/WEB-INF/view/
-spring.view.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
 
 
 # ========================= #
