--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,12 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/webapp/WEB-INF/view/templates/allEmployees.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/templates/allShiftAllocations.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/templates/allShifts.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/templates/employeeRegistration.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/templates/shiftAllocation.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/templates/shiftRegistration.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/templates/shirtSizes.html=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
