--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>HBV501G</groupId>
-	<artifactId>ByrjunSpring-enginnGG</artifactId>
+	<artifactId>Shifter</artifactId>
 	<version>0.1</version>
 
 	<parent>
